[package]
name = "hex-matrix"
edition = "2021"
authors = ["happyboy <superhappyboy1995@gmail.com>"]
description = "build hex matrix using byte array"
keywords = [
  "serialization",
  "data processing",
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/0xhappyboy/hex-matrix"
version = "0.1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
